# auth_core

./: .gitignore  README.md  pyproject.toml  request.md
auth_core/: decorators.py  dependencies.py  exceptions.py
auth_core/interfaces/: permission.py  role.py  token.py  user.py
auth_core/schemas/: jwt.py  permission.py  role.py  token.py  user.py
auth_core/security/: jwt.py
auth_core/services/: auth.py  token.py
